# new_search_engine

./: CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  README.md  SearchEngine.cpp  SearchEngine.h  answers.json  config.json  requests.json  search_engine.cpp  search_engine.sln  search_engine.vcxproj  search_engine.vcxproj.filters
Sample-Test1/: Sample-Test1.vcxproj  test.cpp
gtest/: CMakeLists.txt  gtest.vcxproj  gtest.vcxproj.filters  test.cpp
test_search_engine/: CMakeLists.txt  test_search_engine.cpp  test_search_engine.vcxproj  test_search_engine.vcxproj.filters
